--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <ul class="navbar-nav">
 
           <li class="nav-item ">
-            <a class="nav-link active" href="Index.html">Home</a>
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link active" href="Portal.html">Acesse o nosso portal</a>
+            <a class="nav-link active" href="portal.html">Acesse o nosso portal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Contatar.html">Entre em contato</a>
+            <a class="nav-link active" href="contatar.html">Entre em contato</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link active" href="MaisDaEquipe.html">Mais sobre nós</a>
+            <a class="nav-link active" href="maisdaequipe.html">Mais sobre nós</a>
           </li>
 
           <li>
