--- a/login.html
+++ b/login.html
@@ -17,10 +17,9 @@
 
 <body>
 
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Index.html">
+            <a class="navbar-brand" href="index.html">
 
                 <marquee behavior="slide" direction="up">
                     <img class="logo" src="IMG/Logo.png" width="100%" alt="Logo da Empresa" />
@@ -38,20 +37,19 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item ">
-                        <a class="nav-link active" href="Index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="Portal.html">Acesse o nosso portal</a>
+                        <a class="nav-link active" href="portal.html">Acesse o nosso portal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="Contatar.html">Entre em contato</a>
+                        <a class="nav-link active" href="contatar.html">Entre em contato</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="MaisDaEquipe.html">Mais sobre nós</a>
+                        <a class="nav-link active" href="maisdaequipe.html">Mais sobre nós</a>
                     </li>
-
-                    <li>
-                        <a class="nav-link active" href="login.html">Entrar</a>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link active">Entrar</a>
                     </li>
                 </ul>
             </div>
