--- a/portal.html
+++ b/portal.html
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Index.html">
+            <a class="navbar-brand" href="index.html">
 
                 <marquee behavior="slide" direction="up">
                     <img class="logo" src="IMG/Logo.png" width="100%" alt="Logo da Empresa" />
@@ -39,16 +39,19 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item ">
-                        <a class="nav-link active" href="Index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="Portal.html">Acesse o nosso portal</a>
+                        <a class="nav-link active" href="portal.html">Acesse o nosso portal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="Contatar.html">Entre em contato</a>
+                        <a class="nav-link active" href="contatar.html">Entre em contato</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="MaisDaEquipe.html">Mais sobre nós</a>
+                        <a class="nav-link active" href="maisdaequipe.html">Mais sobre nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link active">Entrar</a>
                     </li>
                 </ul>
             </div>
@@ -56,14 +59,13 @@
     </nav>
 
 
-
     <div class="fundo">
         <div id="textoApresentacao">
 
             <h1>Quem somos?</h1>
-            
 
-            <p >docClass é uma empresa
+
+            <p>docClass é uma empresa
                 voltada ao ensino de idiomas, criada para facilitar a comunicação entre alunos
                 e professores por via da internet.
                 A empresa foi criada no dia 09 de abril de 2021, para desenvolvimento de trabalho
@@ -123,11 +125,10 @@
 
         <div id="textoIntegrantes">
 
-        <h1>docClas.com</h1>
+            <h1>docClas.com</h1>
 
             <p>docClass.com é uma empresa formada por 6 membros:</p>
-            <p><b
-                    style="color: #FAFA00;">Laura Christina</b> é a diretora da empresa. Sua função é liderar os demais
+            <p><b style="color: #FAFA00;">Laura Christina</b> é a diretora da empresa. Sua função é liderar os demais
                 e estar presente na formação de cada parte do projeto.<br />
                 <b style="color: #FFAA50;">Giulia Santos</b> é a gerente de projetos. Sua função é garantir a excelência
                 do projeto por toda a produção.<br />
