--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Index.html">
+      <a class="navbar-brand" href="index.html">
 
         <marquee behavior="slide" direction="up">
           <img class="logo" src="IMG/Logo.png" width="100%" alt="Logo da Empresa" />
