Estilizei a tela de login

--- a/login.html
+++ b/login.html
@@ -74,12 +74,15 @@
                     <input type="password" name="senha" id="" placeholder="********">
                 </div>
                 <br>
-                <input type="submit" value="Entrar">
+                <input type="submit" value="ENTRAR">
 
             </form>
 
-            <button>Cadastro</button>
-
+            <div class="final-login">
+                <p class="final-login-cadastro">Não tem uma conta? <br>
+                    Faça o seu cadastro</p>
+                <a class="cadastro" href="cadastro.html">CADASTRO</a>
+            </div>
         </div>
     </div>
 
