criei o banco de dados, a tela de login.php, a tela meusdadosalunos.html, minnhacontadoaluno.html e estilizei o index.html e o login.html

--- a/meusdadosaluno.html
+++ b/meusdadosaluno.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="style/estilo.css">
 
-  <title>docClass.com</title>
+  <title>Meus Dados</title>
 </head>
 
 <body>
@@ -61,26 +61,7 @@
     </div>
   </nav>
 
-  <!---->
-  <div class="container">
-    <div class="txt-pri">
-
-      <h1>
-        Sejam Bem Vindos!
-      </h1>
-
-      <p class="comeco">
-        A docClass é uma empresa voltada ao ensino de idiomas a distância.
-        Nosso compromisso é fazer com que todos tenham acesso a uma educação de qualidade,
-        com professores certificados e uma plataforma totalmente gratuita.
-        Ficaríamos felizes com sua presença em nossas aulas.
-        Aqui formamos cidadãos com mais oportunidades.
-      </p>
-
-    </div>
-  </div>
-
-
+  
+    
 </body>
-
 </html>
