--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
             Login
         </h2>
 
-        <form action="php/login.php" method="post">
+        <form action="login.php" method="post">
             <div class="formulario">
                 <label for="">E-mail:</label>
                 <input type="email" name="email" id="" placeholder="joaosilva@gmail.com">
