--- a/minhacontadoaluno.html
+++ b/minhacontadoaluno.html
@@ -52,6 +52,7 @@
                         <a href="login.html" class="nav-link active">Entrar</a>
                     </li>
                 </ul>
+                
             </div>
         </div>
     </nav>
@@ -60,11 +61,11 @@
         <h2 style="color: #66edff;">Minha conta</h2>
 
         <div class="cont">
-            
-                <a href="meusdadosaluno.html" class="box-1 box">MEUS DADOS</a>
-                <a href="" class="box-2 box">MINHAS AULAS</a>
-                <a href="" class="box-3 box">TURMAS</a>
-                <a href="" class="box-4 box">CHATS</a>
+
+            <a href="meusdadosaluno copy.php" class="box-1 box">MEUS DADOS</a>
+            <a href="" class="box-2 box">MINHAS AULAS</a>
+            <a href="turmasaluno copy.php" class="box-3 box">TURMAS</a>
+            <a href="" class="box-4 box">ATIVIDADES</a>
 
         </div>
     </div>
