--- a/aluno/desempenho.html
+++ b/aluno/desempenho.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,19 +12,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style/estilo.css">
-    <title>Login</title>
+    <link rel="shortcut icon" href="../IMG/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/estilo.css">
+    <title>Minha Conta</title>
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="../index.html">
 
                 <marquee behavior="slide" direction="up">
-                    <img class="logo" src="IMG/Logo.png" width="100%" alt="Logo da Empresa" />
+                    <img class="logo" src="../IMG/Logo.png" width="100%" alt="Logo da Empresa" />
                 </marquee>
 
             </a>
@@ -38,52 +38,29 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item ">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="portal.html">Acesse o nosso portal</a>
+                        <a class="nav-link active" href="../portal.html">Acesse o nosso portal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contatar.html">Entre em contato</a>
+                        <a class="nav-link active" href="../contatar.html">Entre em contato</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="maisdaequipe.html">Mais sobre nós</a>
+                        <a class="nav-link active" href="../maisdaequipe.html">Mais sobre nós</a>
                     </li>
                     <li class="nav-item">
-                        <a href="login.html" class="nav-link active">Entrar</a>
+                        <a href="../login.html" class="nav-link active">Entrar</a>
                     </li>
                 </ul>
+
             </div>
         </div>
     </nav>
 
-    <div class="container">
-        <h2 style="color: darkgoldenrod;">
-            Login
-        </h2>
+    <h2 style="color: #66edff;">Desempenho das aulas</h2>
 
-        <form action="entrada-login.php" method="post">
-            <div class="formulario">
-                <label for="">E-mail:</label>
-                <input type="email" name="email" id="" placeholder="joaosilva@gmail.com">
-            </div>
-            <br>
-            <div class="formulario">
-                <label for="">Senha:</label>
-                <input type="password" name="senha" id="" placeholder="********">
-            </div>
-            <br>
-            <input type="submit" value="ENTRAR">
-
-        </form>
-
-        <div class="final-login">
-            <p class="final-login-cadastro">Não tem uma conta? <br>
-                Faça o seu cadastro</p>
-            <a class="cadastro" href="cadastro.html">CADASTRO</a>
-        </div>
-    </div>
-
+    <a href="chatcomprofessor.html" class="btn-chat">CHAT COM PROFESSOR <img src="" alt="balão"></a>
 
 </body>
 
