--- a/cadastro.html
+++ b/cadastro.html
@@ -13,11 +13,10 @@
         crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="IMG/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/estilo.css">
-    <title>Login</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
@@ -56,34 +55,6 @@
             </div>
         </div>
     </nav>
-
-    <div class="container">
-        <h2 style="color: darkgoldenrod;">
-            Login
-        </h2>
-
-        <form action="entrada-login.php" method="post">
-            <div class="formulario">
-                <label for="">E-mail:</label>
-                <input type="email" name="email" id="" placeholder="joaosilva@gmail.com">
-            </div>
-            <br>
-            <div class="formulario">
-                <label for="">Senha:</label>
-                <input type="password" name="senha" id="" placeholder="********">
-            </div>
-            <br>
-            <input type="submit" value="ENTRAR">
-
-        </form>
-
-        <div class="final-login">
-            <p class="final-login-cadastro">Não tem uma conta? <br>
-                Faça o seu cadastro</p>
-            <a class="cadastro" href="cadastro.html">CADASTRO</a>
-        </div>
-    </div>
-
 
 </body>
 
