atualizei o estilo das páginas minha conta

--- a/aluno/minhaconta.html
+++ b/aluno/minhaconta.html
@@ -60,7 +60,7 @@
 
     <h2 style="color: #66edff;">Minha conta</h2>
 
-    <div class="cont">
+    <div class="cont-aluno">
 
         <a href="meusdadosaluno copy.php" class="box-1 box">MEUS DADOS</a>
         <a href="" class="box-2 box">MINHAS AULAS</a>
