--- a/professor/minhaconta.html
+++ b/professor/minhaconta.html
@@ -59,12 +59,13 @@
 
     <h2 style="color: #66edff;">Minha conta</h2>
 
-    <div class="cont">
+    <div class="cont-professor">
 
-        <a href="meusdados.php" class="box-1 box">MEUS DADOS</a>
-        <a href="minhasaulas.html" class="box-2 box">MINHAS AULAS</a>
-        <a href="" class="box-4 box">TURMAS</a>
-        <a href="" class="box-5 box">CHATS</a>
+        <a href="meusdados.php" class="box-6 box">MEUS DADOS</a>
+        <a href="minhasaulas.html" class="box-7 box">MINHAS AULAS</a>
+        <a href="" class="box-8 box">TURMAS</a>
+        <a href="" class="box-9 box">ATIVIDADES</a>
+        <a href="" class="box-10 box">CHATS</a>
 
     </div>
 
