--- a/professor/minhasaulas.html
+++ b/professor/minhasaulas.html
@@ -60,9 +60,9 @@
     <h2 style="color: #66edff;">Minhas aulas</h2>
 
     <form class="minha-aula" action="" method="post">
-        <div class="d-flex bg-danger">
+        <div class="">
 
-            <div class="bg-warning cont-grid-1">
+            <div class="">
                 
                 <div class="caixa-1">
                     <label for="">Seu nome:</label>
@@ -81,7 +81,7 @@
 
             </div>
 
-            <div class="bg-info">
+            <div class="">
 
                 <input type="file" name="" id="">
 
