alterei a extensão dos arquivos

--- a/minhacontaprofessor.html
+++ b/minhacontaprofessor.html
@@ -63,7 +63,7 @@
 
         <a href="meusdados.php" class="box-6 box">MEUS DADOS</a>
         <a href="minhasaulas.html" class="box-7 box">MINHAS AULAS</a>
-        <a href="" class="box-8 box">TURMAS</a>
+        <a href="turmas.html" class="box-8 box">TURMAS</a>
         <a href="" class="box-9 box">ATIVIDADES</a>
         <a href="" class="box-10 box">CHATS</a>
 
