--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.php">
 
                 <marquee behavior="slide" direction="up">
                     <img class="logo" src="IMG/Logo.png" width="100%" alt="Logo da Empresa" />
@@ -37,7 +37,7 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item ">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.php">Home</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link active" href="portal.html">Acesse o nosso portal</a>
@@ -46,15 +46,18 @@
                         <a class="nav-link active" href="contatar.html">Entre em contato</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="maisdaequipe.html">Mais sobre nós</a>
+                        <a class="nav-link active" href="maisdaequipe.php">Mais sobre nós</a>
                     </li>
                     <li class="nav-item">
-                        <a href="login.html" class="nav-link active">Entrar</a>
+                        <a href="login.php" class="nav-link active">Entrar</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <h1>QUER FAZER PARTE DO DOCCLASS?</h1>
+
 
 </body>
 
