--- a/public/cad-aluno.html
+++ b/public/cad-aluno.html
@@ -58,7 +58,7 @@
 
     <div class="container">
 
-        <h1>Futuro Aluno docclassaaaaaaaaa</h1>
+        <h1>Futuro Aluno docclass</h1>
 
         <form class="cad-cli" action="cadastrar-aluno.php" method="post">
 
