adicionei a parte do chat

--- a/public/desempenhoaluno.html
+++ b/public/desempenhoaluno.html
@@ -60,7 +60,7 @@
 
     <h2 style="color: #66edff;">Desempenho das aulas</h2>
 
-    <a href="chatcomprofessor.html" class="btn-chat">CHAT COM PROFESSOR <img src="" alt="balão"></a>
+    <a href="users.php" class="btn-chat">CHAT COM PROFESSOR <img src="" alt="balão"></a>
 
 </body>
 
