--- a/public/cad-professor.html
+++ b/public/cad-professor.html
@@ -60,7 +60,7 @@
 
         <h1>Futuro professor docclass</h1>
 
-        <form class="cad-cli" action="cadastrar-professor.php" method="post">
+        <form class="cad-cli" action="cadastrar-professor.php" method="post" enctype="multipart/form-data">
 
             <div class="cad-box-1 m-1 d-flex flex-column">
                 
@@ -80,12 +80,8 @@
 
             <div class="cad-box-2 m-1 d-flex flex-column">
 
-                <label class="mt-3" for="">Gênero:</label>
-                <select required>
-                    <option value="">Masculino</option>
-                    <option value="">Feminino</option>
-                    <option value="">Outro</option>
-                </select>
+                <label class="mt-3" for="">Escolha uma Imagem</label>
+                <input type="file" name="image" accept="image/x-png,image/gif,image/jpeg,image/jpg" required>
                 
 
                 <label class="mt-3" for="">E-mail:</label>
